--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       </div>
       <div class="row pb-5 justify-content-center">
         <div class="col">
-          <form class="sa-form" name="contact" method="POST" data-netlify="true">
+          <form class="sa-form" name="contact" method="POST" netlify>
             <div class="row mb-3">
               <div class="col">
                 <label for="firstName" class="form-label">First Name</label>
