--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container-fluid hero mb-5">
       <div class="row justify-content-start align-items-center">
         <div class="col-8 pl-5">
-          <h1><blockquote>&ldquo;Start a conversation on your own design, your way. Because it’s not just what you design, but how you achieve unique design through artisans.&rdquo;<br><br>Bruce, Co-founder</blockquote></h1>
+          <h1><blockquote>&ldquo;Start a conversation on your own design, your way. Because it’s not just what you design... but how you achieve your unique design through artisans.&rdquo;<br><br>Bruce, Co-founder</blockquote></h1>
         </div>
       </div>
     </div>
@@ -40,9 +40,9 @@
       <div class="row pt-5 pb-5 align-items-center">
         <div class="col pl-5">
           <h4>The mission for <em>Sourcing Africa</em> is to introduce North and South American and European interior designers to communities who have little or no outside opportunities.</h4>
-          <p>We, as hosts in our country, offer scheduled meetings and presentations, an exclusive behind-the-scenes access, and thrilling immersion in destinations, terrain and lodges only in the most desirable neighborhoods.</p>
-          <p>Stimulating ideas off the path of predictable design, we offer international designers the opportunity to work side by side with the many African masters to develop creations that will be part of their interiors and product lineups that aren't ethnic but global in their aesthetic.</p>
-          <p>This is the spirit of the <em>Sourcing Africa</em>, a well-fitted bridge that connects interior designers and artisans who wish to create and offer unique ranges under the guise of the finest in Africa.</p>
+          <p>As hosts on the continent, offer scheduled meetings and presentations, an exclusive behind-the-scenes access, and thrilling immersion in destinations, terrain and lodges only in the most desirable neighborhoods.</p>
+          <p>Stimulating ideas off the path of predictable design, we offer international designers the opportunity to work side by side with the many African masters to develop creations that will be part of their interiors and finely pursued lineups that aren't ethnic but global in their aesthetic.</p>
+          <p>This is the spirit of the <em>Sourcing Africa</em>, a well-fitted bridge that connects interior designers and artisans who wish to create and offer unique pieces under the guise of the finest in Africa.</p>
         </div>
         <div class="col">
           <img class="full-image" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-128.png" />
@@ -57,13 +57,13 @@
       </div>
       <div class="row pt-5 pb-5">
         <div class="col">
-          <h4 class="text-center pb-5">South Africa is known for its creativity and flair when it comes to decor, design, artisans, and forgers.</h4>
-          <p>At <em>Sourcing Africa</em> we source the top talent our region has to offer. Being on the ground in South Africa, we are able to discern which artists have products which work well on an international level, yet remain unique and export cost effective.</p>
+          <h4 class="text-center pb-5">South Africa is known for its creativity and flair when it comes to decor, design, artisans, and metal forgers.</h4>
+          <p>At <em>Sourcing Africa</em> we source the top talent our region has to offer. Being on the ground in South Africa, the team can establish which artists have skills which work well on an international level, yet remain locally unique.</p>
         </div>
       </div>
       <div class="row pt-3 pb-5">
         <div class="col">
-          <img class="full-image" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-82.png" />
+          <img class="full-image" src="img/statue-03.png" />
         </div>
         <div class="col">
           <img class="full-image" src="img/candlesticks.png" />
@@ -71,12 +71,12 @@
       </div>
       <div class="row pt-5 pb-5">
         <div class="col">
-          <p>Our transformative, small-designer personal meetings encourage local fellow artists, designers, town and regional planners, architects, sculptures, ceramic and pottery makers, leather and mohair mills, galleries, showrooms, glass and porcelain blowers, and weavers and beaders in the South African community to collaborate and enter the global theatre.</p>
+          <p>Our transformative, one-on-one consults encourage local fellow artists, designers, town and regional planners, architects, sculptors, ceramic and pottery makers, leather, fabric, and mohair mills, galleries, showrooms, glass and porcelain blowers, and weavers and beaders in the South African community to collaborate and enter the global theatre.</p>
         </div>
       </div>
       <div class="row pt-3 pb-5">
         <div class="col">
-          <img class="full-image" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-86.png" />
+          <img class="full-image" src="img/chandler-pottery.jpeg" />
         </div>
       </div>
       <div class="row pt-3 pb-5">
@@ -89,7 +89,7 @@
       </div>
       <div class="row pt-5 pb-5">
         <div class="col text-center">
-          <h4>This is the spirit of the <em>Sourcing Africa</em>, a well-fitted bridge that connects interior designers and artisans who wish to create and offer unique ranges under the guise of the finest in Africa.</h4>
+          <h4>This is the spirit of the <em>Sourcing Africa</em>, a well-fitted bridge that connects global interior designers and artisans to local artisans.</h4>
         </div>
       </div>
     </div>
@@ -103,7 +103,7 @@
         <div class="col">
           <div class="card border-primary overlap-front" style="width: 35rem; padding: 50px; clear: none;">
             <div class="card-body">
-              <p>With 20 years of working with a portfolio of luxury European businesses as a destination for summits and excursions, Co-founder Helen Johns says <em>&ldquo;Guided  Management led us seamlessly to specialise in unique experiences. Our bespoke guest experiences for groups up to a few hundred people at a time have permeated the halls of global luxury brands and international sports meets alike.&rdquo;</em></p>
+              <p>Co-founder Helen Johns, With 20 years of experience working with a portfolio of luxury European brands, evolving destinations for executive summits and excursions, says <em>&ldquo;Guided  Management led us seamlessly to specialise in unique experiences. Our bespoke guest experiences for groups up to a few hundred people at a time have permeated the halls of global luxury brands and international sports meets alike.&rdquo;</em></p>
             </div>
           </div>
           <img class="overlap-back" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-26.png" />
@@ -139,7 +139,7 @@
         </div>
         <div class="col">
           <h3>Private Chauffeurs</h3>
-          <p>We offer safe transportation with chauffeured vehicles to protect you and your buys, ready to take you wherever you wish to go.</p>
+          <p>We offer safe transportation with chauffeured vehicles to protect you and your purchases, ready to take you wherever you wish to go.</p>
         </div>
       </div>
       <div class="row pt-5 pb-5">
@@ -148,7 +148,7 @@
         </div>
         <div class="col">
           <h3>SPA & Wellness</h3>
-          <p>Pamper yourself with facials, pedicures, manicures, ewraps, massages, and skin treatments. Relax in the pool or sauna, or get in your workout.</p>
+          <p>Pamper yourself with facials, pedicures, manicures, massages, and skin treatments. Relax in the pool or sauna, or get in your workout.</p>
         </div>
       </div>
       <div class="row pt-5 pb-5">
