--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                 <img src="img/art-gallery.png" class="" alt="...">
               </div>
               <div class="carousel-item">
+                <img src="img/cape-point-1.png" class="" alt="...">
+              </div>
+              <div class="carousel-item">
                 <img src="img/caves.png" class="" alt="...">
               </div>
               <div class="carousel-item">
@@ -212,6 +215,9 @@
                 <img src="img/panther.png" class="" alt="...">
               </div>
               <div class="carousel-item">
+                <img src="img/penguins.png" class="" alt="...">
+              </div>
+              <div class="carousel-item">
                 <img src="img/plateau-moon.png" class="" alt="...">
               </div>
               <div class="carousel-item">
@@ -224,10 +230,16 @@
                 <img src="img/sculpture-02.png" class="" alt="...">
               </div>
               <div class="carousel-item">
+                <img src="img/stellenburg.png" class="" alt="...">
+              </div>
+              <div class="carousel-item">
                 <img src="img/textiles.png" class="" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="img/treehouse.png" class="" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Vergelegen-Estate.png" class="" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="img/zebras.png" class="" alt="...">
