--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container-fluid hero mb-5">
       <div class="row justify-content-start align-items-center">
         <div class="col-8 pl-5">
-          <h1><blockquote>&ldquo;Start a conversation on your own design, your way. Because it’s not just what you design... but how you achieve your unique design through artisans.&rdquo;<br><br>Bruce, Co-founder</blockquote></h1>
+          <h1><blockquote>&ldquo;Begin the creative conversation your way - it’s not just what you design, it's all of the artisans through which you work to achieve your vision.&rdquo;<br><br>Bruce, Co-founder</blockquote></h1>
         </div>
       </div>
     </div>
