--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     <div class="container mt-5">
       <div class="row text-center section-heading">
         <div class="col">
-          <h2>2024 Experiences</h2>
+          <h2>2025 Experiences</h2>
         </div>
       </div>
       <div class="row pt-5 pb-5 text-center">
         <div class="col">
           <a href="south-africa.html"><img src="img/capetown beaches.png" style="width: 100%;" /></a>
           <a href="south-africa.html"><h3>South Africa<h3></a>
-          <p>Month, 2024</p>
+          <!-- <p>Month, 2025</p> -->
         </div>
         <div class="col">
           <a href="morocco.html"><img src="img/morocco-columns.png" style="width: 100%;" /></a>
           <a href="morocco.html"><h3>Morocco<h3></a>
-          <p>Month, 2024</p>
+          <!-- <p>Month, 2024</p> -->
         </div>
       </div>
     </div>
