--- a/egypt.html
+++ b/egypt.html
@@ -10,11 +10,11 @@
     <div class="container">
       <main-header></main-header>
     </div>
-    <div class="container-fluid sa-hero mb-5">
+    <div class="container-fluid egypt-hero mb-5">
       <div class="row justify-content-start align-items-center">
         <div class="col-8 pl-5">
-          <h1>South Africa</h1>
-          <h3 class="light-heading">A Unique Opportunity</h3>
+          <h1>Egypt</h1>
+          <h3 class="light-heading">Living History</h3>
         </div>
       </div>
     </div>
@@ -22,11 +22,12 @@
     <div class="container" id="opportunity">
       <div class="row pt-5 pb-5">
         <div class="col">
-          <h4 class="text-center pb-5">South Africa is known for its creativity and flair when it comes to decor, design, artisans, and metal forgers.</h4>
-          <p>At <em>Sourcing Africa</em> we source the top talent our region has to offer. Being on the ground in South Africa, the team can establish which artists have skills which work well on an international level, yet remain locally unique.</p>
+          <h4 class="text-center pb-5">Details on our 2026 Egypt Trip are coming soon!</h4>
+          <!-- <h4 class="text-center pb-5">South Africa is known for its creativity and flair when it comes to decor, design, artisans, and metal forgers.</h4>
+          <p>At <em>Sourcing Africa</em> we source the top talent our region has to offer. Being on the ground in South Africa, the team can establish which artists have skills which work well on an international level, yet remain locally unique.</p> -->
         </div>
       </div>
-      <div class="row pt-3 pb-5">
+      <!-- <div class="row pt-3 pb-5">
         <div class="col">
           <img class="full-image" src="img/statue-03.png" />
         </div>
@@ -56,43 +57,28 @@
         <div class="col text-center">
           <h4>This is the spirit of the <em>Sourcing Africa</em>, a well-fitted bridge that connects global interior designers and artisans to local artisans.</h4>
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row pt-5 text-center section-heading">
-        <div class="col">
-          <h2>2023 Trip Highlights</h2>
-        </div>
-      </div>
-      <div class="row pt-5 pb-5 d-flex flex-wrap justify-content-center">
-        <div class="col d-flex flex-wrap justify-content-center">
-          <img src="img/south-africa-2023-jeep.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-gathering.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-statues.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-pool.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-totem.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-friends.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-safari-1.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-safari-2.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-hotel.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-elephant.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-drinks.png" style="max-width: 20vw;" />
-          <img src="img/south-africa-2023-safari-3.png" style="max-width: 20vw;" />
-        </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="container testimonials mb-4">
       <div class="row py-5 justify-content-center align-items-center text-center">
         <div class="col-12 col-md-4 mb-4 mb-md-0">
-          <img class="full-image" src="img/sarah-eilers.png" />
+          <img class="img-fluid" src="img/Brooke-kelly-design.jpg" alt="Brooke Kelly Design">
         </div>
         <div class="col-12 col-md-6">
-          <blockquote>&ldquo;Early morning drives around the reserve were a favorite and we were fortunate to see the most majestic South African wildlife, including elephants, zebras, giraffes, and lions, up close and personal. Ardmore hosted the loveliest lunch and learn. I'm still dreaming of the exquisite African-inspired
-textiles and tableware. You will soon see many of the pieces used in the tablescapes of our current projects.&rdquo;</blockquote> <p>- Sarah Eilers, Lucas Eilers Design Associates, ASID, NCIDQ ,RID ,DLN</p>
+          <blockquote>&ldquo;Sourcing Africa knows how to plan a trip. The lodgings were exquisite, the food remarkable, and the artisans, oh my! I feel like I have struck gold.&rdquo;</blockquote>
+          <p>- Brooke Kelly, Brooke Kelly Design</p>
         </div>
       </div>
+    </div>
+
+    <div class="container" id="contact">
+      <div class="row pt-5 text-center">
+        <div class="col">
+          <h2>Sign up to get trip details for Egypt 2026</h2>
+        </div>
+      </div>
+      <contact-form></contact-form>
     </div>
 
 
