--- a/experience.html
+++ b/experience.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://use.typekit.net/ymh7ezm.css">
     <link rel="stylesheet" type="text/css" href="styles/styles_main.css">
@@ -18,7 +19,7 @@
       </div>
       <div class="row pt-5 pb-5 align-items-center justify-content-end">
         <div class="col">
-          <div class="card border-primary overlap-front" style="width: 35rem; padding: 50px; clear: none;">
+          <div class="card border-primary overlap-front">
             <div class="card-body">
               <p>Co-founder Helen Johns, With 20 years of experience working with a portfolio of luxury European brands, evolving destinations for executive summits and excursions, says <em>&ldquo;Guided  Management led us seamlessly to specialise in unique experiences. Our bespoke guest experiences for groups up to a few hundred people at a time have permeated the halls of global luxury brands and international sports meets alike.&rdquo;</em></p>
             </div>
@@ -33,46 +34,46 @@
         </div>
       </div>
       <div class="row pt-5 pb-5">
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <img class="full-image" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-23.png" />
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <h3>Private Chef Dining</h3>
           <p>We offer catered fine dining experiences with a private chef for a truly unique experience.</p>
         </div>
       </div>
       <div class="row pt-5 pb-5">
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <img class="full-image" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-20.png" />
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <h3>Conceirge Table Booking</h3>
           <p>We book only the best and latest cuisine and houses of fine dining.</p>
         </div>
       </div>
       <div class="row pt-5 pb-5">
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <img class="full-image" src="img/chauffeur.png" />
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <h3>Private Chauffeurs</h3>
           <p>We offer safe transportation with chauffeured vehicles to protect you and your purchases, ready to take you wherever you wish to go.</p>
         </div>
       </div>
       <div class="row pt-5 pb-5">
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <img class="full-image" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-54.png" />
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <h3>SPA & Wellness</h3>
           <p>Pamper yourself with facials, pedicures, manicures, massages, and skin treatments. Relax in the pool or sauna, or get in your workout.</p>
         </div>
       </div>
       <div class="row pt-5 pb-5">
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <img class="full-image" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-129.png" />
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-md-6">
           <h3>Breathtaking Experiences</h3>
           <p>Meet local artists. Visit game lodges, historical estates, wineries, and monuments. Take in a hike or safari.</p>
         </div>
@@ -183,53 +184,22 @@
       </div>
     </div>
     <div class="container testimonials mb-4">
-      <div class="row py-5 d-flex justify-content-center align-items-center">
-        <div class="col-4">
-          <img src="img/chris-goddard.png" style="width: 300px;" />
+      <div class="row py-5 justify-content-center align-items-center text-center">
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <img class="image-fluid" src="img/chris-goddard.png" style="width: 300px;" />
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <blockquote>&ldquo; It’s hard to truly appreciate the beauty & power of nature until you totally immerse yourself into the amazing world we live in- Inspiration is everywhere.&rdquo;</blockquote> <p>- Chris Goddard, Goddard Design Studio</p>
         </div>
       </div>
     </div>
     <div class="container" id="contact">
-      <div class="row pt-5 text-center section-heading">
+      <div class="row pt-5 text-center">
         <div class="col">
           <h2>Your Personal Invitation</h2>
         </div>
       </div>
-      <div class="row pt-5 pb-5 text-center">
-        <div class="col">
-          <h4>Discover Africa through the lense of design.<br> Join us for a once-in-a-lifetime experience.<h4>
-          <p>Express your interest in our 2024 trip by filling in the form below.</p>
-        </div>
-      </div>
-      <div class="row pb-5 justify-content-center">
-        <div class="col">
-          <form class="sa-form" name="contact" method="POST" netlify>
-            <div class="row mb-3">
-              <div class="col">
-                <label for="firstName" class="form-label">First Name</label>
-                <input type="text" name="first name" id="firstName" class="form-control form-control-lg" placeholder="" aria-label="First name">
-              </div>
-              <div class="col">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" name="last name" id="lastName" class="form-control form-control-lg" placeholder="" aria-label="Last name">
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="emailAddress" class="form-label">Email address</label>
-              <input type="email" name="email" class="form-control form-control-lg" id="emailAddress" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" name="check yes for email" class="form-check-input" id="Check1">
-              <label class="form-check-label" for="Check1">Yes, I want to receive email updates about the 2024 trip.</label>
-            </div>
-            <button type="submit" class="btn sa-button">Submit</button>
-          </form>
-        </div>
-      </div>
+      <contact-form></contact-form>
     </div>
     <div class="container-fluid footer">
       <main-footer></main-footer>
