--- a/index.html
+++ b/index.html
@@ -1,116 +1,88 @@
 <!DOCTYPE html>
-  <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://use.typekit.net/ymh7ezm.css">
     <link rel="stylesheet" type="text/css" href="styles/styles_main.css">
-
   </head>
   <body>
     <div class="container">
       <main-header></main-header>
     </div>
+
     <div class="container-fluid hero mb-5">
-      <div class="row justify-content-start align-items-center">
-        <div class="col-8 pl-5">
+      <div class="row justify-content-center text-center">
+        <div class="col-12 col-md-10">
           <h1><blockquote>&ldquo;Begin the creative conversation your way - it’s not just what you design, it's all of the artisans through which you work to achieve your vision.&rdquo;<br><br>Bruce MacDonald, Co-founder</blockquote></h1>
         </div>
       </div>
     </div>
+
     <div class="container mb-5" id="mission">
-      <div class="row pt-5 align-items-center">
-        <div class="col">
-          <h4 style="text-align: center;">The mission for <em>Sourcing Africa</em> is to introduce North and South American and European interior designers to communities who have little or no outside opportunities.</h4>
+      <div class="row pt-5">
+        <div class="col text-center">
+          <h4>The mission for <em>Sourcing Africa</em> is to introduce North and South American and European interior designers to communities who have little or no outside opportunities.</h4>
         </div>
       </div>
-      <div class="row pt-5 pb-5 justify-content-space-between align-items-center">
-        <div class="col">
+      <div class="row pt-5 pb-5 align-items-center">
+        <div class="col-md-6 mb-4 mb-md-0">
           <p>As hosts on the continent, offer scheduled meetings and presentations, an exclusive behind-the-scenes access, and thrilling immersion in destinations, terrain and lodges only in the most desirable neighborhoods.</p>
           <p>Stimulating ideas off the path of predictable design, we offer international designers the opportunity to work side by side with the many African masters to develop creations that will be part of their interiors and finely pursued lineups that aren't ethnic but global in their aesthetic.</p>
           <p>This is the spirit of the <em>Sourcing Africa</em>, a well-fitted bridge that connects interior designers and artisans who wish to create and offer unique pieces under the guise of the finest in Africa.</p>
         </div>
-        <div class="col">
-          <img class="full-image" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-128.png" />
+        <div class="col-md-6 text-center">
+          <img class="img-fluid" src="img/Sourcing Africa Trip Cape Town 2023 v2_JJ-128.png" alt="Sourcing Africa Trip">
         </div>
       </div>
     </div>
 
     <div class="container mt-5">
-      <div class="row text-center section-heading">
+      <div class="row text-center">
         <div class="col">
-          <h2>2025 Experiences</h2>
+          <h2>Upcoming Experiences</h2>
         </div>
       </div>
       <div class="row pt-5 pb-5 text-center">
-        <div class="col">
-          <a href="south-africa.html"><img src="img/capetown beaches.png" style="width: 100%;" /></a>
-          <a href="south-africa.html"><h3>South Africa<h3></a>
-          <!-- <p>Month, 2025</p> -->
+        <div class="col-12 col-md-6 mb-4">
+          <a href="south-africa.html"><img class="img-fluid" src="img/capetown beaches.png" alt="South Africa"></a>
+          <a href="south-africa.html"><h3>South Africa</h3></a>
+          <p>2025</p>
         </div>
-        <div class="col">
-          <a href="morocco.html"><img src="img/morocco-columns.png" style="width: 100%;" /></a>
-          <a href="morocco.html"><h3>Morocco<h3></a>
-          <!-- <p>Month, 2024</p> -->
+        <div class="col-12 col-md-6 mb-4">
+          <a href="morocco.html"><img class="img-fluid" src="img/Nile-River-History-Egypt-Tours-Portal-529116969.jpg" alt="Egypt"></a>
+          <a href="egypt.html"><h3>Egypt</h3></a>
+          <p>February 2026</p>
         </div>
       </div>
     </div>
 
     <div class="container testimonials mb-4">
-      <div class="row py-5 d-flex justify-content-center align-items-center">
-        <div class="col-4">
-          <img src="img/Brooke-kelly-design.jpg" style="width: 300px;" />
+      <div class="row py-5 justify-content-center align-items-center text-center">
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <img class="img-fluid" src="img/Brooke-kelly-design.jpg" alt="Brooke Kelly Design">
         </div>
-        <div class="col-6">
-          <blockquote>&ldquo;Sourcing Africa knows how to plan a trip. The lodgings were exquisite, the food remarkable, and the artisians, oh my! I feel like I have struck gold.&rdquo;</blockquote> <p>- Brooke Kelly, Brooke Kelly Design</p>
+        <div class="col-12 col-md-6">
+          <blockquote>&ldquo;Sourcing Africa knows how to plan a trip. The lodgings were exquisite, the food remarkable, and the artisans, oh my! I feel like I have struck gold.&rdquo;</blockquote>
+          <p>- Brooke Kelly, Brooke Kelly Design</p>
         </div>
       </div>
     </div>
 
     <div class="container" id="contact">
-      <div class="row pt-5 text-center section-heading">
+      <div class="row pt-5 text-center">
         <div class="col">
           <h2>Your Personal Invitation</h2>
         </div>
       </div>
-      <div class="row pt-5 pb-5 text-center">
-        <div class="col">
-          <h4>Discover Africa through the lense of design.<br> Join us for a once-in-a-lifetime experience.<h4>
-          <p>Express your interest in our 2024 trip by filling in the form below.</p>
-        </div>
-      </div>
-      <div class="row pb-5 justify-content-center">
-        <div class="col">
-          <form class="sa-form" name="contact" method="POST" netlify>
-            <div class="row mb-3">
-              <div class="col">
-                <label for="firstName" class="form-label">First Name</label>
-                <input type="text" name="first name" id="firstName" class="form-control form-control-lg" placeholder="" aria-label="First name">
-              </div>
-              <div class="col">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" name="last name" id="lastName" class="form-control form-control-lg" placeholder="" aria-label="Last name">
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="emailAddress" class="form-label">Email address</label>
-              <input type="email" name="email" class="form-control form-control-lg" id="emailAddress" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" name="check yes for email" class="form-check-input" id="Check1">
-              <label class="form-check-label" for="Check1">Yes, I want to receive email updates about the 2024 trip.</label>
-            </div>
-            <button type="submit" class="btn sa-button">Submit</button>
-          </form>
-        </div>
-      </div>
+      <contact-form></contact-form>
     </div>
+
     <div class="container-fluid footer">
       <main-footer></main-footer>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
