--- a/morocco.html
+++ b/morocco.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://use.typekit.net/ymh7ezm.css">
     <link rel="stylesheet" type="text/css" href="styles/styles_main.css">
@@ -60,12 +61,13 @@
     </div>
 
     <div class="container testimonials mb-4">
-      <div class="row py-5 d-flex justify-content-center align-items-center">
-        <div class="col-4">
-          <img src="img/Brooke-kelly-design.jpg" style="width: 300px;" />
+      <div class="row py-5 justify-content-center align-items-center text-center">
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <img class="img-fluid" src="img/Brooke-kelly-design.jpg" alt="Brooke Kelly Design">
         </div>
-        <div class="col-6">
-          <blockquote>&ldquo;Sourcing Africa knows how to plan a trip. The lodgings were exquisite, the food remarkable, and the artisians, oh my! I feel like I have struck gold.&rdquo;</blockquote> <p>- Brooke Kelly, Brooke Kelly Design</p>
+        <div class="col-12 col-md-6">
+          <blockquote>&ldquo;Sourcing Africa knows how to plan a trip. The lodgings were exquisite, the food remarkable, and the artisans, oh my! I feel like I have struck gold.&rdquo;</blockquote>
+          <p>- Brooke Kelly, Brooke Kelly Design</p>
         </div>
       </div>
     </div>
